ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-blog-ingress
  namespace: default
  annotations:
    # Auto-issue SSL from Let's Encrypt via cert-manager
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Use HTTPS entrypoint only
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Enable Gzip/Brotli compression AND Rate Limiting middlewares
    traefik.ingress.kubernetes.io/router.middlewares: default-compress@kubernetescrd, default-global-rate-limit@kubernetescrd
spec:
  rules:
    # Frontend (Next.js)
    - host: "dailydevops.blog"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-blog-client-svc
                port:
                  number: 80
    # Backend API (Node.js)
    - host: "api.dailydevops.blog"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-blog-server-svc
                port:
                  number: 80
  tls:
    - hosts:
        - dailydevops.blog
        - api.dailydevops.blog
      secretName: devops-blog-tls
